# rustydog

./: .gitignore  Cargo.toml
firmware/: platformio.ini  readme.md
firmware/src/: DisplayMod.cpp  DisplayMod.hpp  MqttMod.cpp  MqttMod.hpp  ServoMod.cpp  ServoMod.hpp  config.hpp  main.cpp
hardware/: Cargo.toml  lib.rs
hardware/src/: lib.rs  main.rs
kinematics/: Cargo.toml  derivation.html  derivation.ipynb  lib.rs
kinematics/forward/algorithms/: analytical.rs  mod.rs
kinematics/inverse/algorithms/: heuristic.rs  mod.rs
kinematics/model/: mod.rs
kinematics/motion/: circular.rs
