[package]
name = "hardware"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.37.0", features = ["full", "sync"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio-util = { version = "0.7.10", features = ["rt"] }
strum = "0.26.2"
strum_macros = "0.26.2"
regex = "1.10.4"
rand = "0.8.5"
tokio-stream = "0.1.15"

[lib]
name = "hardware"
path = "src/lib.rs"
